kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/006_inheritedproperty2_inv.kmt
/* $Id: 006_inheritedproperty2_inv.kmt,v 1.1 2007-09-10 08:35:12 cfaucher Exp $ */

// Test of constraints on operations
// When constraints are checked, errors

package root_package;
using kermeta::standard



class C1
{
	reference p1 : String
}


class C2 inherits C1
{
	reference p1 : Integer
}
